fixing login issues of super admin